<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/pv_video"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:visibility="gone"
        app:resize_mode="zoom"
         />

    <TextView
        android:id="@+id/tv_step_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:text="Step"
         />

    <TextView
        android:id="@+id/tv_step_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        tools:text="This is the introduction for recipe" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/button_previous_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Previous Step"
            android:layout_margin="16dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"/>

        <Button
            android:id="@+id/button_next_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next Step"
            android:layout_margin="16dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</LinearLayout>